# linkedin_job

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
charts/fastapi/: Chart.yaml  values.yaml
charts/fastapi/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/linked_job/: __init__.py  app.py
